--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,11 +11,11 @@
     <title>Boson-Tech</title>
 </head>
 <body>
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark" style="background-color: #33272a;">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
       <img src="/images/icon.png" alt="" width="30" height="24" class="d-inline-block align-text-top" style="margin-left: 2rem;">
-      Let's Travel
+      Here We go!
     </a>
   </div>
 </nav>  
