--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,7 @@
 <%-include("partials/header")-%>
-<div class="container-fluid" style="margin-top: 2rem;">
+<div class="container-fluid" style="margin-top: 5rem;">
     <div class="row justify-content-around">
-        <div class="col-md-5 col-sm-10">
-            <div class="row justify-content-center">
-                <div class="col-10">
-                    <h1>Where are you heading to next?</h1>
-                </div>
-            </div>
-        </div>
+        
         <div class="col-lg-5 col-sm-10">
             <div class="row justify-content-center">
                 <div class="col-10">
@@ -15,7 +9,7 @@
                     <form method="POST" action="/">
                         <div class="input-group mb-3" style="margin-top: 2rem;">
                             <input type="text" name="city" class="form-control" placeholder="Enter location" aria-label="Enter location" aria-describedby="button-addon2">
-                            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Go!</button>
+                            <button class="btn btn-outline-secondary" type="submit" id="button-addon2" style="background-color: #ffc6c7;">Go!</button>
                         </div>
                     </form>
                 </div>
@@ -23,5 +17,19 @@
         </div>
     </div>
 </div>
+<div class="container" style="margin-top: 3rem;">
+    <div class="card">
+        <div class="card-header" style="background-color: #ffc6c7;">
+            Quote
+        </div>
+        <div class="card-body">
+            <blockquote class="blockquote mb-0">
+            <p>Once a year, go somewhere you have never been before.</p>
+            <footer class="blockquote-footer"><cite title="Source Title">Dalai Lama</cite></footer>
+            </blockquote>
+        </div>
+    </div>
+</div>
+
 
 <%-include("partials/footer")-%>
